--- a/_Imports.razor
+++ b/_Imports.razor
@@ -10,3 +10,12 @@
 @using CardsCustomers.Shared
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Grids
+@using ChartJs.Blazor;
+@using ChartJs.Blazor.Common
+@using ChartJs.Blazor.Common.Axes
+@using ChartJs.Blazor.Common.Axes.Ticks
+@using ChartJs.Blazor.Common.Enums
+@using ChartJs.Blazor.Common.Handlers
+@using ChartJs.Blazor.Common.Time
+@using ChartJs.Blazor.Util
+@using ChartJs.Blazor.Interop
