modified trabsaction points for customers

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,7 +9,7 @@
 @using CardsCustomers
 @using CardsCustomers.Shared
 
-@using ChartJs.Blazor;
+@*@using ChartJs.Blazor;
 @using ChartJs.Blazor.Common
 @using ChartJs.Blazor.Common.Axes
 @using ChartJs.Blazor.Common.Axes.Ticks
@@ -18,7 +18,7 @@
 @using ChartJs.Blazor.Common.Time
 @using ChartJs.Blazor.Util
 @using ChartJs.Blazor.Interop
-@using ChartJs.Blazor.LineChart;
+@using ChartJs.Blazor.LineChart;*@
 
 
 
