--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using ChartJs.Blazor.PieChart
+@*@using ChartJs.Blazor.PieChart*@
 @using CardsCustomers.Models.Services;
 @inject ICustomerService CustomerService
 @inject ITransactionService TransactionService
@@ -10,52 +10,51 @@
 Welcome to your new app.
 
 <h1>Charts!</h1>
-<Chart Config="_pieConfig"></Chart>
+@*<Chart Config="_pieConfig"></Chart>*@
 @code {
-    private PieConfig _pieConfig;
     public int CustomerCount { get; set; } = 0;
     public int PurchaseSum { get; set; } = 0;
     public int TotalDiscount { get; set; } = 0;
     public int TotalPurchaseWithDiscountApplyed { get; set; } = 0;
 
-    protected override void OnInitialized()
-    {
-        CustomerCount = CustomerService.CountCustomers();
-        PurchaseSum = Convert.ToInt32(TransactionService.TotalPurchase());
-        TotalDiscount = TransactionService.TotalDiscountApplyed();
-        TotalPurchaseWithDiscountApplyed =Convert.ToInt32(TransactionService.TotalPurchaseWithDiscountApplyed());
-        ConfigurePieConfig();
+    //protected override void OnInitialized()
+    //{
+    //    CustomerCount = CustomerService.CountCustomers();
+    //    PurchaseSum = Convert.ToInt32(TransactionService.TotalPurchase());
+    //    TotalDiscount = TransactionService.TotalDiscountApplyed();
+    //    TotalPurchaseWithDiscountApplyed =Convert.ToInt32(TransactionService.TotalPurchaseWithDiscountApplyed());
+    //    ConfigurePieConfig();
 
-    }
+    //}
 
-    private void ConfigurePieConfig()
-    {
-        _pieConfig = new PieConfig();
-        _pieConfig.Options = new PieOptions
-            {
-                Responsive = true,
-                Title = new OptionsTitle
-                {
-                    Display = true,
-                    Text = "Chart"
+    //private void ConfigurePieConfig()
+    //{
+    //    _pieConfig = new PieConfig();
+    //    _pieConfig.Options = new PieOptions
+    //        {
+    //            Responsive = true,
+    //            Title = new OptionsTitle
+    //            {
+    //                Display = true,
+    //                Text = "Chart"
 
-                }
+    //            }
 
-            };
-        foreach (var party in new[] { CustomerCount + " Clients", PurchaseSum + " Total Purchases", "Purchase With Discounts " + TotalPurchaseWithDiscountApplyed })
-        {
-            _pieConfig.Data.Labels.Add(party);
-        }
-        var dataset = new PieDataset<int>(new[] { CustomerCount, PurchaseSum, TotalPurchaseWithDiscountApplyed })
-            {
-                BackgroundColor = new[]
-                    {
-                ColorUtil.ColorHexString(255,0,0),
-                ColorUtil.ColorHexString(0,255,0),
-                ColorUtil.ColorHexString(0,0,255)
-                }
-            };
+    //        };
+    //    foreach (var party in new[] { CustomerCount + " Clients", PurchaseSum + " Total Purchases", "Purchase With Discounts " + TotalPurchaseWithDiscountApplyed })
+    //    {
+    //        _pieConfig.Data.Labels.Add(party);
+    //    }
+    //    var dataset = new PieDataset<int>(new[] { CustomerCount, PurchaseSum, TotalPurchaseWithDiscountApplyed })
+    //        {
+    //            BackgroundColor = new[]
+    //                {
+    //            ColorUtil.ColorHexString(255,0,0),
+    //            ColorUtil.ColorHexString(0,255,0),
+    //            ColorUtil.ColorHexString(0,0,255)
+    //            }
+    //        };
 
-        _pieConfig.Data.Datasets.Add(dataset);
-    }
+    //    _pieConfig.Data.Datasets.Add(dataset);
+    //}
 }
