--- a/Pages/TTransaction.razor
+++ b/Pages/TTransaction.razor
@@ -43,7 +43,7 @@ else
                 @foreach (var cust in CustomerList)
                 {
                     var customerInfo = @cust.Name + " " + @cust.Surname;
-                    <option value="@cust.IdCustomer">@customerInfo</option>
+                    <option value="@cust.IdCustomer" @key="@cust.IdCustomer">@customerInfo</option>
                 }
 
             </InputSelect>
@@ -86,11 +86,19 @@ else
         <div class="col-sm-4">
             <InputSelect id="discount" @bind-Value="Transaction.Discount" disabled=@IsInViewMode @oninput="DiscountFromDdw" class="form-select">
                 <option value="-1"> -- Select -- </option>
-                @foreach (var disc in DiscountList)
+                @if(IdDiscountFromDdw.HasValue && IdDiscountFromDdw!=-1)
                 {
-                    var element = @disc.DiscountName + " - " + @disc.PointsNeeded + " Points Nedded";
-                    <option value="@disc.IdDiscount">@element</option>
+                    <option value="@IdDiscountFromDdw" selected @key="@IdDiscountFromDdw">@DiscountList.FirstOrDefault(x=>x.IdDiscount==IdDiscountFromDdw.Value).DiscountName</option>
                 }
+                else
+                {
+                    @foreach (var disc in DiscountList)
+                    {
+                        var element = @disc.DiscountName + " - " + @disc.PointsNeeded + " Points Nedded";
+                        <option value="@disc.IdDiscount" @key="@disc.IdDiscount">@element</option>
+                    }
+                }
+               
 
             </InputSelect>
         </div>
@@ -144,7 +152,8 @@ else
     public Customer customer { get; set; }
 
     private int IdCustomerValueDdw { get; set; }
-    public int CustomerPointsUpdated { get; set; }
+    public int? CustomerPointsUpdated { get; set; }
+    private int? IdDiscountFromDdw { get; set; }
 
     protected override async Task OnParametersSetAsync()
     {
@@ -182,12 +191,18 @@ else
         {
             btnText = Id == null ? "Save new Transaction" : "Update Transaction";
 
-            CustomerList = (await TransactionService.GetCustomers()).ToList();
+            if ( CustomerList.Count==0)
+            {
+                CustomerList = (await TransactionService.GetCustomers()).ToList();
+            }
+
 
 
             if (Id is not null)
             {
-                DiscountList = DiscountService.GetAllDiscount().ToList();
+                Transaction = TransactionService.GetTransactionById(Id);
+                DiscountList = DiscountService.GetAllDiscount().Where(x=>x.IdDiscount==Transaction.Discount.Value).ToList();//ddw of discounts after event gets null
+                IdDiscountFromDdw = Transaction.Discount;
             }
         }
         catch (Exception)
@@ -215,7 +230,15 @@ else
                 TransactionService.CreateTransaction(Transaction);
 
                 //must update customers points
-                customer.Points = CustomerPointsUpdated;
+                if (CustomerPointsUpdated.HasValue)
+                {
+                      customer.Points = CustomerPointsUpdated.Value;
+                }
+                else
+                {
+                    customer.Points = Transaction.Balance;
+                }
+              
                 CustomerService.UpdateCustomerWithoutRedirect(customer.IdCustomer, customer);
             }
             else
@@ -284,28 +307,25 @@ else
                 {
                     int Purchase = Convert.ToInt32(args.Value);
                     decimal? PointsEarnedFromLastPurchase = 0;
-                    decimal lastpointssaved = 0;
-                    var pointspermoney = PointsPerMoneyService.GetAllPointsPerMoney();
+                    decimal? lastpointssaved = null;
                     Transaction.Balance = 0;
                     Transaction.Discount = -1;
                     Transaction.Points = customer.Points;
                     Transaction.NewValue = 0;
-                    if (pointspermoney is null)
+                    lastpointssaved = PointsPerMoneyService.GetLastPointPerMoneySaved();
+                    if (lastpointssaved is null)
                     {
                         throw new InvalidOperationException("An error occured!");
                     }
                     else
                     {
-                        lastpointssaved = PointsPerMoneyService.GetLastPointPerMoneySaved();
-                        if (lastpointssaved != null)
-                        {
-                            PointsEarnedFromLastPurchase = lastpointssaved * Purchase;
-                            Transaction.PointsFromCurTrans = Convert.ToInt32(PointsEarnedFromLastPurchase);
-                            Transaction.Balance = Transaction.PointsFromCurTrans.Value + customer.Points;
 
-                            //Transaction.Points = Transaction.PointsFromCurTrans.Value + customer.Points;
-                        }
-                        DiscountList = DiscountService.GetAllDiscount().ToList().Where(x => x.PointsNeeded <= Transaction.Balance);
+                        PointsEarnedFromLastPurchase = lastpointssaved * Purchase;
+                        Transaction.PointsFromCurTrans = Convert.ToInt32(PointsEarnedFromLastPurchase);
+                        Transaction.Balance = Transaction.PointsFromCurTrans.Value + customer.Points;
+
+
+                        DiscountList = DiscountService.GetAllDiscount().ToList().Where(x => x.IdDiscount <= Transaction.Balance);
 
                     }
 
@@ -337,12 +357,10 @@ else
             if (args.Value.ToString() != "-1")
             {
 
-                Transaction.PointsFromCurTrans = 0;
-                var Iddiscount = Convert.ToString(args.Value);
-                Discount discount = DiscountService.GetDiscountById(Convert.ToInt32(Iddiscount));
-                //Transaction.Points = customer.Points.Value;
+              IdDiscountFromDdw = Convert.ToInt32(args.Value);
+                Discount discount = DiscountService.GetDiscountById(Convert.ToInt32(IdDiscountFromDdw));
                 decimal discountPercent = Convert.ToDecimal(discount.DiscountPercent) / 100;
-                Transaction.Discount = Convert.ToInt32(Iddiscount);
+                Transaction.Discount = Convert.ToInt32(IdDiscountFromDdw);
                 //llogaritja e vleres qe duhet zbritur cmimit
                 var cmimiaktual = Transaction.Purchase;
                 var skontoezgjedhur = discountPercent;
@@ -356,11 +374,13 @@ else
                 }
                 else
                 {
-                    Transaction.Balance = customer.Points + pointdiscountedOfCurTrans;
+                    Transaction.Balance = customer.Points ;
                 }
 
                 //must update the customer points
                 CustomerPointsUpdated = Transaction.Balance.Value;
+                Transaction.PointsFromCurTrans = 0;// if chosed one discount points of this purchase will remain 0
+                DiscountList = DiscountService.GetAllDiscount().ToList();//ddw of discounts after event gets null
             }
             else
             {
