--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -5,56 +5,93 @@
 @inject ITransactionService TransactionService
 <PageTitle>Index</PageTitle>
 
-<h1>Card Managment!</h1>
+@*<h1>Card Managment!</h1>
 
-Welcome to your new app.
+Welcome to your new app.*@
 
 <h1>Charts!</h1>
-@*<Chart Config="_pieConfig"></Chart>*@
+<LineChart @ref="lineChart" Width="800" Class="mb-4" />
 @code {
-    public int CustomerCount { get; set; } = 0;
-    public int PurchaseSum { get; set; } = 0;
-    public int TotalDiscount { get; set; } = 0;
-    public int TotalPurchaseWithDiscountApplyed { get; set; } = 0;
+    private LineChart lineChart = default!;
+    private LineChartOptions lineChartOptions = default!;
+    private ChartData chartData = default!;
 
-    //protected override void OnInitialized()
-    //{
-    //    CustomerCount = CustomerService.CountCustomers();
-    //    PurchaseSum = Convert.ToInt32(TransactionService.TotalPurchase());
-    //    TotalDiscount = TransactionService.TotalDiscountApplyed();
-    //    TotalPurchaseWithDiscountApplyed =Convert.ToInt32(TransactionService.TotalPurchaseWithDiscountApplyed());
-    //    ConfigurePieConfig();
+    protected override void OnInitialized()
+    {
+        var colors = ColorBuilder.CategoricalTwelveColors;
 
-    //}
+        var labels = new List<string> { "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" };
+        var datasets = new List<IChartDataset>();
 
-    //private void ConfigurePieConfig()
-    //{
-    //    _pieConfig = new PieConfig();
-    //    _pieConfig.Options = new PieOptions
-    //        {
-    //            Responsive = true,
-    //            Title = new OptionsTitle
-    //            {
-    //                Display = true,
-    //                Text = "Chart"
+        var dataset1 = new LineChartDataset
+            {
+                Label = "Windows",
+                Data = new List<double> { 7265791, 5899643, 6317759, 6315641, 5338211, 8496306, 7568556, 8538933, 8274297, 8657298, 7548388, 7764845 },
+                BackgroundColor = new List<string> { colors[0] },
+                BorderColor = new List<string> { colors[0] },
+                BorderWidth = new List<double> { 2 },
+                HoverBorderWidth = new List<double> { 4 },
+                PointBackgroundColor = new List<string> { colors[0] },
+                PointRadius = new List<int> { 0 }, // hide points
+                PointHoverRadius = new List<int> { 4 }
+            };
+        datasets.Add(dataset1);
 
-    //            }
+        var dataset2 = new LineChartDataset
+            {
+                Label = "macOS",
+                Data = new List<double> { 1809499, 1816642, 2122410, 1809499, 1850793, 1846743, 1954797, 2391313, 1983430, 2469918, 2633303, 2821149 },
+                BackgroundColor = new List<string> { colors[1] },
+                BorderColor = new List<string> { colors[1] },
+                BorderWidth = new List<double> { 2 },
+                HoverBorderWidth = new List<double> { 4 },
+                PointBackgroundColor = new List<string> { colors[1] },
+                PointRadius = new List<int> { 0 }, // hide points
+                PointHoverRadius = new List<int> { 4 }
+            };
+        datasets.Add(dataset2);
 
-    //        };
-    //    foreach (var party in new[] { CustomerCount + " Clients", PurchaseSum + " Total Purchases", "Purchase With Discounts " + TotalPurchaseWithDiscountApplyed })
-    //    {
-    //        _pieConfig.Data.Labels.Add(party);
-    //    }
-    //    var dataset = new PieDataset<int>(new[] { CustomerCount, PurchaseSum, TotalPurchaseWithDiscountApplyed })
-    //        {
-    //            BackgroundColor = new[]
-    //                {
-    //            ColorUtil.ColorHexString(255,0,0),
-    //            ColorUtil.ColorHexString(0,255,0),
-    //            ColorUtil.ColorHexString(0,0,255)
-    //            }
-    //        };
+        var dataset3 = new LineChartDataset
+            {
+                Label = "Other",
+                Data = new List<double> { 1081241, 1100363, 1118136, 1073255, 1120315, 1395736, 1488788, 1489466, 1489947, 1414739, 1735811, 1820171 },
+                BackgroundColor = new List<string> { colors[2] },
+                BorderColor = new List<string> { colors[2] },
+                BorderWidth = new List<double> { 2 },
+                HoverBorderWidth = new List<double> { 4 },
+                PointBackgroundColor = new List<string> { colors[2] },
+                PointRadius = new List<int> { 0 }, // hide points
+                PointHoverRadius = new List<int> { 4 }
+            };
+        datasets.Add(dataset3);
 
-    //    _pieConfig.Data.Datasets.Add(dataset);
-    //}
+        chartData = new ChartData
+            {
+                Labels = labels,
+                Datasets = datasets
+            };
+
+        lineChartOptions = new();
+        lineChartOptions.Responsive = true;
+        lineChartOptions.Interaction = new Interaction { Mode = InteractionMode.Index };
+
+        lineChartOptions.Scales.X.Title.Text = "2019";
+        lineChartOptions.Scales.X.Title.Display = true;
+
+        lineChartOptions.Scales.Y.Title.Text = "Visitors";
+        lineChartOptions.Scales.Y.Title.Display = true;
+
+        lineChartOptions.Plugins.Title.Text = "Operating system";
+        lineChartOptions.Plugins.Title.Display = true;
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await lineChart.InitializeAsync(chartData, lineChartOptions);
+        }
+        await base.OnAfterRenderAsync(firstRender);
+    }
+
 }
