--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,13 +1,13 @@
 ﻿@page "/"
 @*@using ChartJs.Blazor.PieChart*@
+@using CardsCustomers.Models.ChartsModels;
 @using CardsCustomers.Models.Services;
 @inject ICustomerService CustomerService
 @inject ITransactionService TransactionService
+@using CardsCustomers.Models;
 <PageTitle>Index</PageTitle>
 
-@*<h1>Card Managment!</h1>
 
-Welcome to your new app.*@
 
 <h1>Charts!</h1>
 <LineChart @ref="lineChart" Width="800" Class="mb-4" />
@@ -15,74 +15,12 @@ Welcome to your new app.*@
     private LineChart lineChart = default!;
     private LineChartOptions lineChartOptions = default!;
     private ChartData chartData = default!;
+    public List<TransactionsPerMonth> ListPurchaseMonths = new List<TransactionsPerMonth>();
 
     protected override void OnInitialized()
     {
-        var colors = ColorBuilder.CategoricalTwelveColors;
-
-        var labels = new List<string> { "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" };
-        var datasets = new List<IChartDataset>();
-
-        var dataset1 = new LineChartDataset
-            {
-                Label = "Windows",
-                Data = new List<double> { 7265791, 5899643, 6317759, 6315641, 5338211, 8496306, 7568556, 8538933, 8274297, 8657298, 7548388, 7764845 },
-                BackgroundColor = new List<string> { colors[0] },
-                BorderColor = new List<string> { colors[0] },
-                BorderWidth = new List<double> { 2 },
-                HoverBorderWidth = new List<double> { 4 },
-                PointBackgroundColor = new List<string> { colors[0] },
-                PointRadius = new List<int> { 0 }, // hide points
-                PointHoverRadius = new List<int> { 4 }
-            };
-        datasets.Add(dataset1);
-
-        var dataset2 = new LineChartDataset
-            {
-                Label = "macOS",
-                Data = new List<double> { 1809499, 1816642, 2122410, 1809499, 1850793, 1846743, 1954797, 2391313, 1983430, 2469918, 2633303, 2821149 },
-                BackgroundColor = new List<string> { colors[1] },
-                BorderColor = new List<string> { colors[1] },
-                BorderWidth = new List<double> { 2 },
-                HoverBorderWidth = new List<double> { 4 },
-                PointBackgroundColor = new List<string> { colors[1] },
-                PointRadius = new List<int> { 0 }, // hide points
-                PointHoverRadius = new List<int> { 4 }
-            };
-        datasets.Add(dataset2);
-
-        var dataset3 = new LineChartDataset
-            {
-                Label = "Other",
-                Data = new List<double> { 1081241, 1100363, 1118136, 1073255, 1120315, 1395736, 1488788, 1489466, 1489947, 1414739, 1735811, 1820171 },
-                BackgroundColor = new List<string> { colors[2] },
-                BorderColor = new List<string> { colors[2] },
-                BorderWidth = new List<double> { 2 },
-                HoverBorderWidth = new List<double> { 4 },
-                PointBackgroundColor = new List<string> { colors[2] },
-                PointRadius = new List<int> { 0 }, // hide points
-                PointHoverRadius = new List<int> { 4 }
-            };
-        datasets.Add(dataset3);
-
-        chartData = new ChartData
-            {
-                Labels = labels,
-                Datasets = datasets
-            };
-
-        lineChartOptions = new();
-        lineChartOptions.Responsive = true;
-        lineChartOptions.Interaction = new Interaction { Mode = InteractionMode.Index };
-
-        lineChartOptions.Scales.X.Title.Text = "2019";
-        lineChartOptions.Scales.X.Title.Display = true;
-
-        lineChartOptions.Scales.Y.Title.Text = "Visitors";
-        lineChartOptions.Scales.Y.Title.Display = true;
-
-        lineChartOptions.Plugins.Title.Text = "Operating system";
-        lineChartOptions.Plugins.Title.Display = true;
+        PurchaseChartRender();
+        ClientsChartRender();
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -94,4 +32,122 @@ Welcome to your new app.*@
         await base.OnAfterRenderAsync(firstRender);
     }
 
+    public void PurchaseChartRender()
+    {
+        var colors = ColorBuilder.CategoricalTwelveColors;
+
+        ListPurchaseMonths = TransactionService.GetPurchaseForMonth(Convert.ToString(DateTime.Now.Year));
+        var datasets = new List<IChartDataset>();
+        dynamic labels = null;
+        labels = GetMonthPurchaseForTransactions();
+
+        var dataset1 = new LineChartDataset
+            {
+                Label = "Purchase",
+                Data = GetPurchaseForTransactions(),
+                BackgroundColor = new List<string> { colors[0] },
+                BorderColor = new List<string> { colors[0] },
+                BorderWidth = new List<double> { 2 },
+                HoverBorderWidth = new List<double> { 4 },
+                PointBackgroundColor = new List<string> { colors[0] },
+                PointRadius = new List<int> { 0 }, // hide points
+                PointHoverRadius = new List<int> { 4 }
+
+            };
+
+        datasets.Add(dataset1);
+
+
+
+        chartData = new ChartData
+            {
+                Labels = labels,
+                Datasets = datasets
+            };
+
+        lineChartOptions = new();
+        lineChartOptions.Responsive = true;
+        lineChartOptions.Interaction = new Interaction
+            {
+                Mode = InteractionMode.Index
+            };
+
+        lineChartOptions.Scales.X.Title.Text = Convert.ToString(DateTime.Now.Year);
+        lineChartOptions.Scales.X.Title.Display = true;
+
+        lineChartOptions.Scales.Y.Title.Text = "Purchase Amount";
+        lineChartOptions.Scales.Y.Title.Display = true;
+
+        lineChartOptions.Plugins.Title.Text = "Purchase Per Month";
+        lineChartOptions.Plugins.Title.Display = true;
+    }
+
+    public void ClientsChartRender()
+    {
+        var colors = ColorBuilder.CategoricalTwelveColors;
+
+        ListPurchaseMonths = TransactionService.GetPurchaseForMonth(Convert.ToString(DateTime.Now.Year));
+        var datasets = new List<IChartDataset>();
+        dynamic labels = null;
+        labels = GetMonthPurchaseForTransactions();
+
+        var dataset1 = new LineChartDataset
+            {
+                Label = "Purchase",
+                Data = GetPurchaseForTransactions(),
+                BackgroundColor = new List<string> { colors[0] },
+                BorderColor = new List<string> { colors[0] },
+                BorderWidth = new List<double> { 2 },
+                HoverBorderWidth = new List<double> { 4 },
+                PointBackgroundColor = new List<string> { colors[0] },
+                PointRadius = new List<int> { 0 }, // hide points
+                PointHoverRadius = new List<int> { 4 }
+
+            };
+
+        datasets.Add(dataset1);
+
+
+
+        chartData = new ChartData
+            {
+                Labels = labels,
+                Datasets = datasets
+            };
+
+        lineChartOptions = new();
+        lineChartOptions.Responsive = true;
+        lineChartOptions.Interaction = new Interaction
+            {
+                Mode = InteractionMode.Index
+            };
+
+        lineChartOptions.Scales.X.Title.Text = Convert.ToString(DateTime.Now.Year);
+        lineChartOptions.Scales.X.Title.Display = true;
+
+        lineChartOptions.Scales.Y.Title.Text = "Purchase Amount";
+        lineChartOptions.Scales.Y.Title.Display = true;
+
+        lineChartOptions.Plugins.Title.Text = "Purchase Per Month";
+        lineChartOptions.Plugins.Title.Display = true;
+    }
+
+    public List<double> GetPurchaseForTransactions()
+    {
+        List<double> purchaseresult = new List<double>();
+        foreach (var item in ListPurchaseMonths)
+        {
+            purchaseresult.Add(Convert.ToDouble(item.Purchasep));
+        }
+        return purchaseresult;
+    }
+    public List<string> GetMonthPurchaseForTransactions()
+    {
+        List<string> monthresult = new List<string>();
+        foreach (var item in ListPurchaseMonths)
+        {
+            monthresult.Add(Convert.ToString(item.monthp));
+        }
+        return monthresult;
+    }
 }
